--- a/black_jack_game/style.css
+++ b/black_jack_game/style.css
@@ -31,6 +31,7 @@ h4{
     height: 10vh;
     width: calc(10vh * 0.71);       /*ratio of card size */
     /* border: 1px solid blueviolet; */
+    margin: 0 3px;
 }
 .card-text{
     margin: auto;
