added addtional font style

--- a/black_jack_game/style.css
+++ b/black_jack_game/style.css
@@ -23,6 +23,7 @@ h1{
     border: 2px solid black;
 }
 h4{
+    font-family: 'Roboto Condensed', sans-serif;
     /* width: 100%; */
     margin: 10px 0 ;
 }
